--- a/source/_posts/技术/你或许以为你不需要领域驱动设计.md
+++ b/source/_posts/技术/你或许以为你不需要领域驱动设计.md
@@ -1,3 +1,12 @@
+
+---
+title:  你或许以为你不需要领域驱动设计
+date: 2019-11-5 16:28
+tags: 技术
+author: 邹溪源
+categories:
+  - 技术
+---
 # 一、易于腐化的软件设计
 犹记得刚刚参加工作时，是地图厂商四维图新集团旗下的一家子公司，主要从事规划测绘相关软件研发的公司。当时我的项目是为勘测设计院提供相对应的应用软件，对地理信息和规划相关的图纸信息，几乎已经专业水平。事实上，规划设计大概和软件设计类似，有规划的设计、或无规划的设计，造成的结果几乎是天壤之别。  
 
