--- a/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
+++ b/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
@@ -1,3 +1,12 @@
+---
+title:  开发者的不断进取，源自对技术的点滴追求
+date: 2019-11-5 16:28
+tags: 随笔
+author: 邹溪源
+categories:
+  - 随笔
+---
+
 # 身边的优秀开发者，【DotNET骚操作】周杰
 # 一，社区的小圈子
 今年3月的一次技术交流活动上，那是我们.NET技术社区第一次组织线下活动，由于没什么经验，所以活动组织得比较仓促，内容也比较一般，效果还是有点欠缺。当然，活动本身是必要的，这次活动上有幸认识了许多长沙的优秀开发者，这让我非常的高兴。
