--- a/source/_posts/技术/你或许以为你不需要领域驱动设计.md
+++ b/source/_posts/技术/你或许以为你不需要领域驱动设计.md
@@ -12,7 +12,7 @@ categories:
 
 我们或许很容易就能设想到一个毫无规划设计的城市，纵横交错的路网、杂乱无章式的建筑布局、各种凌乱的棚户区设计，恰好象征着软件设计的无序性，也恰好体现了软件企业在经费不足、组织缺乏管理、开发者能力不足、软件随时随地想改就改时的行业现状，只能说这样的软件是最能符合当时实际劳动生产力水平的产品。  
 
-![巴西棚户区](https://github.com/farway000/techq.xyz/blob/master/images/%E5%BC%80%E5%8F%91%E8%80%85%E7%9A%84%E4%B8%8D%E6%96%AD%E8%BF%9B%E5%8F%96/image.png) 
+![巴西棚户区](https://github.com/farway000/techq.xyz/blob/master/images/ddd-9/22240044.jpg) 
 
 如图一所示，巴西棚户区，层层叠叠、风格迥异、密密麻麻，如果作为一个外人贸然来到这样的地方，大概很容易迷失期间、更不用说充斥在棚户区的各类毒品和黑社会。杂乱无章的建筑和街区，就像代码中错综复杂的调用链；而借助贫民区搞事的黑社会就像是代码中的异味或者bug，表面上看起来如此平静、与世无争、但是你永远也不知道啥时候会来一冷枪。 
 
@@ -52,7 +52,7 @@ categories:
 
 假设我们设计出的符合三层架构的系统结构图简化后，如下图所示：
 
-![简单结构](https://github.com/farway000/techq.xyz/blob/master/images/%E5%BC%80%E5%8F%91%E8%80%85%E7%9A%84%E4%B8%8D%E6%96%AD%E8%BF%9B%E5%8F%96/struct.png)
+![简单结构](https://github.com/farway000/techq.xyz/blob/master/images/ddd-9/struct.png)
 
 我们来看看这种数据库建模的开发流程中的输出成果：
 
@@ -83,7 +83,7 @@ categories:
 
 领域驱动设计引入了一堆新的架构形式，包括经典的四层架构、EDA（事件驱动架构）、CQRS架构（命令查询职责分离）。而由于Evans的原书没有过分讨论如何识别领域，后来又有许多大佬在他的基础上进行了完善，提出了许多方法，包括名词、形容词、动词建模法、事件风暴、四色建模等方法，限于篇幅，且听下回分解。
 
-![领域驱动的结构](https://github.com/farway000/techq.xyz/blob/master/images/%E5%BC%80%E5%8F%91%E8%80%85%E7%9A%84%E4%B8%8D%E6%96%AD%E8%BF%9B%E5%8F%96/ddd.png)
+![领域驱动的结构](https://github.com/farway000/techq.xyz/blob/master/images/ddd-9/ddd.png)
 
 # 五、思维的转变，才是最大的困难
 领域驱动设计，或许是解决这些问题的一剂良方，但也或许是开启了暗黑世界的大门。
@@ -94,11 +94,11 @@ categories:
 
 然而思维模式的转换并非易事，从过程式代码中，抽离出与对象有关的行为，远比理解这几个概念要复杂，这需要大量经验的积累。
 
-![领域的复杂性](https://github.com/farway000/techq.xyz/blob/master/images/%E5%BC%80%E5%8F%91%E8%80%85%E7%9A%84%E4%B8%8D%E6%96%AD%E8%BF%9B%E5%8F%96/ddd-complex.png)
+![领域的复杂性](https://github.com/farway000/techq.xyz/blob/master/images/ddd-9/ddd-complex.png)
 
 毋庸置疑，数据库建模驱动软件开发具有速度快、学习成本低的显著特点，在许多项目中，能在短期内可以给开发者带来许多便利；而应用领域驱动设计，则可以在更长的维护周期内，给软件维护带来实质性好处。
 
 两种不同类型的开发模式，根据企业实际出发进行选择，还只是开始，但能真正运用好领域驱动设计或者UML、面向对象设计这种软件工程的美学思维来改造我们的系统，让系统绽放出更加璀璨的光芒，这才是软件设计的乐趣所在。
 
-![如何画马](https://github.com/farway000/techq.xyz/blob/master/images/%E5%BC%80%E5%8F%91%E8%80%85%E7%9A%84%E4%B8%8D%E6%96%AD%E8%BF%9B%E5%8F%96/drawhorse.png)
+![如何画马](https://github.com/farway000/techq.xyz/blob/master/images/ddd-9/drawhorse.png)
 
