--- a/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
+++ b/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
@@ -17,7 +17,7 @@ categories:
 
 哪怕有许多开发者得以突破转到了项目管理或其他方向，也很难能够在专业领域能够进一步的发展。毕竟首先企业大环境决定了个人的职业选择，其次就是很少有开发者能够明白的看清自己的职业发展规划，为了钱而生存无可厚非，然后整个职业生涯都迷迷茫茫，只能导致最终到了一定的年纪，就开始原地踏步了。
 
-![别瞎迷茫了](https://raw.githubusercontent.com/farway000/techq.xyz/blob/master/images/开发者的不断进取/image.png)
+![别瞎迷茫了](https://raw.githubusercontent.com/farway000/techq.xyz/master/images/开发者的不断进取/image.png)
 
 # 二、周杰的成长历程
 而公众号DotNet骚操作的作者周杰则是小城市中少有的对技术始终保持热心的优秀开发者。周杰也是参加了我们第一次活动的三十位开发者中的一位。
@@ -46,7 +46,7 @@ categories:
 
 他使我明白，无论是什么岗位，在什么环境下，都应该清楚自己的职业发展方向，并努力提高自己的硬技能和软实力，这是开发者得以利足于时代永不淘汰的光辉色彩。
 
-![肚子上的才华已经表现得太明显了](https://raw.githubusercontent.com/farway000/techq.xyz/blob/master/images/开发者的不断进取/person.png)
+![肚子上的才华已经表现得太明显了](https://raw.githubusercontent.com/farway000/techq.xyz/master/images/开发者的不断进取/person.png)
 
 （ps，大概需要减肥了。。）
 
@@ -72,7 +72,7 @@ categories:
 # 结语
 欢迎大家关注他的公众号，【DotNet骚操作】。也请大家记住他，一位年轻而充满激情的开发者。
 
-![DotNET骚操作公众号二维码](https://raw.githubusercontent.com/farway000/techq.xyz/blob/master/images/开发者的不断进取/qrcode.png)
+![DotNET骚操作公众号二维码](https://raw.githubusercontent.com/farway000/techq.xyz/master/images/开发者的不断进取/qrcode.png)
 
 让我们一起跟随他的步伐，看看DotNet的一系列骚操作将如何给我们的生活带来更多精彩。
 
