--- a/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
+++ b/source/_posts/随笔/开发者的不断进取，源自对技术的点滴追求.md
@@ -46,7 +46,7 @@ categories:
 
 他使我明白，无论是什么岗位，在什么环境下，都应该清楚自己的职业发展方向，并努力提高自己的硬技能和软实力，这是开发者得以利足于时代永不淘汰的光辉色彩。
 
-![肚子上的才华已经表现得太明显了](https://raw.githubusercontent.com/farway000/techq.xyz/master/images/开发者的不断进取/person.png)
+![才华照](https://raw.githubusercontent.com/farway000/techq.xyz/master/images/开发者的不断进取/person.png)
 
 （ps，大概需要减肥了。。）
 
