--- a/source/_posts/技术/简述介绍.NET Core中的依赖注入方法.md
+++ b/source/_posts/技术/简述介绍.NET Core中的依赖注入方法.md
@@ -1,10 +1,10 @@
 ---
 title:  在.NET  Core/Framework中使用依赖注入框架
 date: 2019-12-1 16:28
-tags: 随笔
+tags: 技术
 author: 邹溪源
 categories:
-  - 随笔
+  - 技术
 ---
 
 # 在.NET  Core/Framework中使用依赖注入框架
