--- a/source/_posts/读书/《程序员的三门课》读书笔记.md
+++ b/source/_posts/读书/《程序员的三门课》读书笔记.md
@@ -7,7 +7,7 @@ categories:
   - 读书
 ---
 
-# 一
+# 一  回顾我的职场体会
 我的职场生涯开始于十年前，一直在中小企业发展，未曾有幸到沿海那些高速发展的互联网公司工作，也就错过了互联网的大时代。
 
 但这不影响我的正常工作生活，事实上无论你身在何处，或在哪家公司，以各种title生存，我们都是在属于自己的职场道路上奋力拼搏，为了实现自己的人生梦想，我们需要付出的代价和努力，或许并不亚于我们的父辈。
@@ -18,7 +18,7 @@ categories:
 
 当然，大时代的发展看似与我们大多数人关系不大，我们只是时代的见证者和受益人，而还有一些人，他们都积极的参与到其中，并为这个时代的发展起到了看似简单但也至关重要的作用。
 
-# 二
+# 二 价值或没价值，其实不用争执
 我一贯认为围绕价值的争执毫无意义，毕竟每个人的评判标准截然不同，但不同的人大概目标是一致的，追求创造属于自己的价值，实现自己的梦想。当然，在时代的裹挟之下，大多数人都难以真正拥有自己的梦想。往往都是在本能的驱使下，选择工作，家庭，按部就班的工作，陪伴家庭逐渐的向未来前进。
 
 但这不影响我们可以设想一下我们应该拥有的一些共识，例如使命，价值观和文化。我觉得这三者是非常重要的东西，使命驱使我们前进，价值观促使我们拥有自己的原则，而文化是我们过去受到的家庭教育，学校教育和社会教育在灵魂上的投影。这些东西某种意义来说决定了我们的货币价值。
@@ -31,7 +31,7 @@ categories:
 
 而社会中的每个个体都看似不一样，但往往也能够互相协作，互相支撑，每个人都有自己的职业分工，但总有工作交集的存在。这就意味着看似不一样的生活或工作，总能找到一些值得复用和思考的知识领域，这就需要我们放开心胸与其他人交流，从而使自己的精神更加饱满。
 
-# 三
+# 三 写书和读书，是一种灵魂对话
 而写博客，写书或读书大概是最好的一种方式，作者把自己的成长故事和所思所感记下来，再借助书这种载体输出，既实现了自己知识的沉淀，又能将自己的知识领域向外播撒；
 
 读者可以花并不高的代价购买到来自于作者一手的知识分享，又能在书中寻找自己的存在，达到与作者的共鸣，这样的学习一定会让人获益非浅。
@@ -42,7 +42,7 @@ categories:
 
 有时候我们会想知道，哪里可以获得系统的学习方法呢？
 
-# 四
+# 四 这本书值得读的点
 一本《程序员的三门课》，或许能够给你带来思考。
 
 这本书没有试图像那些能够给我们带来直接收入的【21天学会xx技术】的书一样，能够迅速让我们迅速的学会新技术，他甚至有点像啰嗦的前辈一样，说了一些让人摸不着边际的东西。
@@ -65,7 +65,7 @@ categories:
 
 如果初涉管理，作者们也介绍了他们的许多感受，包括做好准备，抓住机会，构建领导力，和高效的时间管理。尤其是时间管理，为什么同样都是996，作者们却不仅把代码写得很完美，还能有时间写那么多博客呢。团队培养，看起来简单却不简单，书里面也提到了许多措施。
 
-# 五
+# 五 总结
 一本好书，能够给你带来一点思考，就已经足够了，如果让你获得了超过一点思考，那就是赚大了。
 
 冷静的阅读一下，你会有不一样的收获。这些都是你自己的收获，更是属于你自己的无穷财富。
