--- a/source/_posts/技术/持续交付全流程思考与实践.md
+++ b/source/_posts/技术/持续交付全流程思考与实践.md
@@ -134,7 +134,7 @@ categories:
 >parameters{
 >        string(name:'ProjectName', defaultValue: 'Enter Your ProjectName', description: 'Enter your project name here')
 >        string(name:'Contact', defaultValue: '"@All","xxx"', description: 'Enter Your Contract') 
->        string(name:'RepoUrl', defaultValue: 'https://gitee.com/shend/GrpcWebDemo.git', description: ' gitee代码路径')
+>        string(name:'RepoUrl', defaultValue: 'https://gitee.com/xxx/xxx.git', description: ' gitee代码路径')
 >}
 
 在jenkins界面中，可以显示成
