--- a/source/_posts/随笔/如何快速融入团队并成为团队核心（六）.md
+++ b/source/_posts/随笔/如何快速融入团队并成为团队核心（六）.md
@@ -31,7 +31,7 @@ categories:
 
 显然我们都知道，时间对每个人来说都是均衡的，我们难免想充分利用今天的时间，但也往往会立下许多不切实际的flag，并被抖X和头条把所有的剩余时间全部消耗殆尽，只有那么少数几个人能够真正把握时间的重要性，并充分利用时间，将自己的精力最大化。
 
-我曾向一位老师请教请教一本销量极广的IT书籍作者的高效工作方法，她说：这位老师确实很优秀，他每天几乎有处理不完的邮件，如果他把自己的精力全部投入到处理邮件上，那几乎很难获得今天的成就。正是因为他明白自己的精力有限，因此他能用最高效的方法完成自己工作，使得他能够在一堆混乱的事务中挑出最有价值的珍珠，从而实现了工作、生活的相对平衡。  
+我曾向一位老师请教请教一本销量极广的IT书籍作者的高效工作方法，她说：这位老师确实很优秀，他每天几乎有处理不完的邮件，如果他把自己的精力全部投入到处理邮件上，那几乎很难获得今天的成就。正是因为他明白自己的精力有限，他明白哪些事情最重要，因此他能用最高效的方法完成自己工作，使得他能够在一堆混乱的事务中挑出最有价值的珍珠，从而实现了工作、生活的相对平衡。  
 
 确实如此，我也曾立了许多Flag，却发现大部分都实现不了，还不如每天就认真干好几件事，一点点的积累起来才更显得弥足珍贵。
 
