--- a/source/_posts/管理/我是如何完成一个短期项目的？.md
+++ b/source/_posts/管理/我是如何完成一个短期项目的？.md
@@ -1,3 +1,11 @@
+---
+title: 我是如何完成一个短期项目的？
+date: 2020-5-26 22:28
+tags: 随笔
+author: 邹溪源
+categories:
+  - 随笔
+---
 1. 项目启动
 
 4月中旬，接到指示，需要于5月10日完成一个紧急任务，这个项目是为一位核心客户打造一套具备公众号，后台和大屏显示系统相关的完整系统，而此时，我们的团队构建还并没有完成，意味着我们需要实现的将是一个超出现有团队实际能力的项目。
