--- a/source/_posts/随笔/那个程序员，为什么选择改行_.md
+++ b/source/_posts/随笔/那个程序员，为什么选择改行_.md
@@ -1,3 +1,11 @@
+---
+title:  那个程序员，为什么选择改行_
+date: 2020-4-17 22:28
+tags: 随笔
+author: 邹溪源
+categories:
+  - 随笔
+---
 # 一
 有一天，一位同事跟我说：老w已经改行做美缝去了，你怎么看？
 
